fix z-index problems with scrolling content and google maps

--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -77,6 +77,7 @@ a:hover { text-decoration: underline; }
 {
 	position: fixed; top: 0px; width: 100%;    
 	height: 69px;        
+	z-index: 79;
 	background-color: #DAE0D2;	 	
 }
 
@@ -96,7 +97,7 @@ a:hover { text-decoration: underline; }
 
 #menu
 {
-	z-index: 100;
+	z-index: 80;
 	position: relative;
 	top: 13px;
 	margin-left: auto; margin-right: auto; width: 940px;
